--- a/app/src/main/res/layout/activity_connected.xml
+++ b/app/src/main/res/layout/activity_connected.xml
@@ -8,15 +8,11 @@
     android:layout_height="match_parent"
     tools:context="com.forcetower.uefs.activity.ConnectedActivity">
 
-    <TextView
-        android:id="@+id/message"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:text="@string/title_schedule"
-        android:layout_alignParentTop="true"/>
-    
+    <FrameLayout
+        android:id="@+id/fragment_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    </FrameLayout>
 
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/navigation"
@@ -26,5 +22,14 @@
         android:layout_alignParentStart="true"
         android:background="?android:attr/windowBackground"
         app:menu="@menu/navigation"/>
+
+    <TextView
+        android:id="@+id/message"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="@dimen/activity_horizontal_margin"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
+        android:text="@string/title_schedule"/>
 
 </RelativeLayout>
