--- a/app/src/main/res/layout/activity_connected.xml
+++ b/app/src/main/res/layout/activity_connected.xml
@@ -11,7 +11,9 @@
     <FrameLayout
         android:id="@+id/fragment_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_above="@+id/navigation"
+        android:layout_alignParentStart="true">
     </FrameLayout>
 
     <android.support.design.widget.BottomNavigationView
@@ -21,6 +23,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
         android:background="?android:attr/windowBackground"
+        android:elevation="20dp"
         app:menu="@menu/navigation"/>
 
     <TextView
@@ -30,6 +33,7 @@
         android:layout_alignParentTop="true"
         android:layout_marginStart="@dimen/activity_horizontal_margin"
         android:layout_marginTop="@dimen/activity_vertical_margin"
+        android:visibility="invisible"
         android:text="@string/title_schedule"/>
 
 </RelativeLayout>
