--- a/app/src/main/res/layout/activity_connected.xml
+++ b/app/src/main/res/layout/activity_connected.xml
@@ -18,7 +18,7 @@
 
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/navigation"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
