--- a/app/src/main/res/layout/schedule_class_item.xml
+++ b/app/src/main/res/layout/schedule_class_item.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/class_item_view_root"
     android:layout_width="match_parent"
-    android:layout_height="60dp">
+    android:layout_height="60dp"
+    android:background="android:attr/selectableItemBackground">
 
     <TextView
         android:id="@+id/tv_class_name"
@@ -32,7 +33,7 @@
         tools:text="07:30 ~ 09:30"/>
 
     <TextView
-        android:id="@+id/tv_class_location"
+        android:id="@+id/tv_class_locat
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/tv_class_name"
