Added support for Android API 16~20

--- a/app/src/main/res/layout/schedule_class_header.xml
+++ b/app/src/main/res/layout/schedule_class_header.xml
@@ -12,6 +12,7 @@
         android:textSize="12sp"
         android:layout_centerVertical="true"
         android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
         android:textColor="@color/colorPrimary"
         android:fontFamily="@font/roboto_medium"
         tools:text="Monday"/>
