--- a/app/src/main/res/layout/schedule_class_item.xml
+++ b/app/src/main/res/layout/schedule_class_item.xml
@@ -13,7 +13,8 @@
         android:id="@+id/tv_class_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/tv_class_time"
+        android:layout_alignStart="@id/tv_class_time"
+        android:layout_alignLeft="@id/tv_class_time"
         android:layout_alignParentTop="true"
         android:layout_marginTop="10dp"
         android:fontFamily="@font/roboto_regular"
@@ -27,6 +28,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/tv_class_name"
         android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
         android:layout_marginTop="4dp"
         android:fontFamily="@font/roboto_regular"
         android:textSize="12sp"
@@ -40,8 +42,10 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/tv_class_name"
         android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
         android:layout_marginTop="4dp"
         android:layout_toEndOf="@id/tv_class_time"
+        android:layout_toRightOf="@id/tv_class_time"
         android:fontFamily="@font/roboto_regular"
         android:textSize="12sp"
         android:textColor="@android:color/black"
@@ -53,9 +57,11 @@
         android:layout_width="90dp"
         android:layout_height="40dp"
         android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
         android:background="@drawable/def_button_border"
         android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
         android:fontFamily="@font/roboto_regular"
         android:elevation="1dp"
         android:visibility="invisible"
