Removed some warnings

--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -4,16 +4,15 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:nestedScrollingEnabled="false"
     android:fillViewport="true">
 
     <LinearLayout
+        android:id="@+id/classes_ll_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:clipToPadding="false"
         android:background="@color/light_gray"
-        android:nestedScrollingEnabled="false"
         android:paddingBottom="4dp">
 
         <RelativeLayout
@@ -24,8 +23,7 @@
             android:layout_marginLeft="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
-            android:layout_marginTop="4dp"
-            android:elevation="20dp">
+            android:layout_marginTop="4dp">
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/rv_schedule_mon"
@@ -42,8 +40,7 @@
             android:layout_marginLeft="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
-            android:layout_marginTop="4dp"
-            android:elevation="20dp">
+            android:layout_marginTop="4dp">
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/rv_schedule_tue"
                 android:layout_width="match_parent"
@@ -59,8 +56,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
-            android:layout_marginTop="4dp"
-            android:elevation="20dp">
+            android:layout_marginTop="4dp">
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/rv_schedule_wed"
                 android:layout_width="match_parent"
@@ -76,8 +72,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
-            android:layout_marginTop="4dp"
-            android:elevation="20dp">
+            android:layout_marginTop="4dp">
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/rv_schedule_thu"
                 android:layout_width="match_parent"
@@ -93,8 +88,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
-            android:layout_marginTop="4dp"
-            android:elevation="20dp">
+            android:layout_marginTop="4dp">
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/rv_schedule_fri"
                 android:layout_width="match_parent"
@@ -110,8 +104,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
-            android:layout_marginTop="4dp"
-            android:elevation="20dp">
+            android:layout_marginTop="4dp">
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/rv_schedule_sat"
                 android:layout_width="match_parent"
@@ -127,8 +120,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
-            android:layout_marginTop="4dp"
-            android:elevation="20dp">
+            android:layout_marginTop="4dp">
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/rv_schedule_sun"
                 android:layout_width="match_parent"
