--- a/app/src/main/res/xml/syncadapter.xml
+++ b/app/src/main/res/xml/syncadapter.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <sync-adapter
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:contentAuthority="com.forcetower.uefs"
-    android:accountType="com.example.uefs"
-    android:userVisible="true"
-    android:name="Sagres Sync"
+    android:contentAuthority="com.forcetower.uefs.providers"
+    android:accountType="com.forcetower.uefs"
+    android:userVisible="false"
     android:supportsUploading="false"
     android:allowParallelSyncs="false"
     android:isAlwaysSyncable="true"/>
