--- a/app/src/main/res/layout/fragment_message_board.xml
+++ b/app/src/main/res/layout/fragment_message_board.xml
@@ -14,17 +14,17 @@
             android:id="@+id/rl_root"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
             android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp"
             android:layout_marginRight="8dp"
-            android:layout_marginEnd="8dp">
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp">
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/rv_messages"
-                android:layout_alignParentTop="true"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"/>
         </RelativeLayout>
     </ScrollView>
 
