--- a/app/src/main/res/layout/activity_message_old.xml
+++ b/app/src/main/res/layout/activity_message_old.xml
@@ -10,73 +10,73 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
-        android:layout_alignParentTop="true"/>
+        android:layout_alignParentTop="true"
+        android:background="@color/colorPrimary"/>
 
     <TextView
         android:id="@+id/tv_class_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/toolbar"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
         android:layout_marginEnd="16dp"
+        android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:textSize="18sp"
         android:fontFamily="@font/roboto_regular"
         android:textColor="@color/primaryText"
+        android:textSize="18sp"
         tools:text="COD123 - Nome da Disciplina"/>
 
     <ScrollView
         android:id="@+id/sv_message_root"
-        android:layout_below="@+id/tv_class_name"
         android:layout_width="match_parent"
         android:layout_height="390dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
+        android:layout_below="@+id/tv_class_name"
         android:layout_marginEnd="16dp"
+        android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp">
 
         <TextView
             android:id="@+id/tv_message_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:text="@tools:sample/lorem/random"
-            android:textSize="14sp"
             android:fontFamily="@font/roboto_regular"
-            android:textColor="@color/primaryText"/>
+            android:textColor="@color/primaryText"
+            android:textSize="14sp"
+            tools:text="@tools:sample/lorem/random"/>
     </ScrollView>
 
     <TextView
         android:id="@+id/tv_sender_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="14sp"
+        android:layout_above="@id/tv_received_time"
+        android:layout_marginBottom="4dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginStart="16dp"
         android:fontFamily="@font/roboto_regular"
         android:textColor="@color/secondaryText"
-        android:layout_above="@id/tv_received_time"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginBottom="4dp"
+        android:textSize="14sp"
         tools:text="Nome do Professor"/>
 
     <TextView
         android:id="@+id/tv_received_time"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="14sp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginStart="16dp"
         android:fontFamily="@font/roboto_regular"
         android:textColor="@color/secondaryText"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginBottom="16dp"
-        android:layout_alignParentBottom="true"
+        android:textSize="14sp"
         tools:text="Há 22 horas atrás"/>
 
 </RelativeLayout>
