--- a/app/src/main/res/layout/activity_parsing.xml
+++ b/app/src/main/res/layout/activity_parsing.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
-    android:id="@+id/view_root"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/view_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.forcetower.uefs.activity.ParsingActivity">
@@ -12,20 +12,20 @@
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
         android:indeterminate="true"/>
 
     <TextView
         android:id="@+id/tv_information"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="16sp"
-        android:visibility="invisible"
-        tools:text="Processing information..."
         android:layout_above="@id/progress_bar"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="8dp"/>
+        android:layout_marginBottom="8dp"
+        android:textSize="16sp"
+        android:visibility="invisible"
+        tools:text="Processing information..."/>
 </RelativeLayout>
