--- a/app/src/main/res/menu/connected.xml
+++ b/app/src/main/res/menu/connected.xml
@@ -5,8 +5,8 @@
 
     <item
         android:id="@+id/menu_settings"
-        android:title="@string/settings"
-        app:showAsAction="always"
         android:icon="@drawable/ic_settings_black_24dp"
-        android:orderInCategory="1"/>
+        android:orderInCategory="1"
+        android:title="@string/settings"
+        app:showAsAction="always"/>
 </menu>
