--- a/app/src/main/res/xml-v21/preferences.xml
+++ b/app/src/main/res/xml-v21/preferences.xml
@@ -3,19 +3,19 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <PreferenceCategory
-        android:title="@string/pref_header_data_sync"
-        android:key="data_and_sync_category">
+        android:key="data_and_sync_category"
+        android:title="@string/pref_header_data_sync">
 
         <ListPreference
-            android:key="sync_frequency"
-            android:title="@string/pref_sync_frequency"
-            android:summary="@string/pref_sync_frequency_enabled"
             android:defaultValue="60"
-            android:icon="@drawable/ic_sync_accent_30dp"
             android:entries="@array/pref_sync_frequency_titles"
             android:entryValues="@array/pref_sync_frequency_values"
+            android:icon="@drawable/ic_sync_accent_30dp"
+            android:key="sync_frequency"
             android:negativeButtonText="@null"
-            android:positiveButtonText="@null"/>
+            android:positiveButtonText="@null"
+            android:summary="@string/pref_sync_frequency_enabled"
+            android:title="@string/pref_sync_frequency"/>
     </PreferenceCategory>
 
     <PreferenceCategory
@@ -59,10 +59,10 @@
         android:title="@string/pref_account_settings">
 
         <Preference
+            android:icon="@drawable/ic_logoff_accent_30dp"
             android:key="logoff_key"
-            android:title="@string/pref_logoff"
             android:summary="@string/pref_logoff_summary"
-            android:icon="@drawable/ic_logoff_accent_30dp"/>
+            android:title="@string/pref_logoff"/>
     </PreferenceCategory>
 
 </PreferenceScreen>
