--- a/app/src/main/res/xml/authenticator.xml
+++ b/app/src/main/res/xml/authenticator.xml
@@ -3,5 +3,5 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:accountType="com.forcetower.uefs"
     android:icon="@mipmap/ic_launcher_round"
-    android:smallIcon="@mipmap/ic_launcher_round"
-    android:label="@string/app_name"/>
+    android:label="@string/app_name"
+    android:smallIcon="@mipmap/ic_launcher_round"/>
