--- a/app/src/main/res/layout/loading_sdk.xml
+++ b/app/src/main/res/layout/loading_sdk.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/view_root"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.forcetower.uefs.activity.ParsingActivity">
+    android:layout_height="match_parent">
 
     <ProgressBar
         android:id="@+id/progress_bar"
@@ -25,18 +24,10 @@
         android:layout_above="@id/progress_bar"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="8dp"
-        android:textSize="16sp"
-        android:visibility="invisible"
-        tools:text="Processing information..."/>
-
-    <TextView
-        android:id="@+id/tv_user_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@id/tv_information"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="8dp"
-        android:textSize="16sp"
-        android:visibility="invisible"
+        android:textSize="14sp"
+        android:textColor="@color/primaryText"
+        android:fontFamily="@font/roboto_regular"
+        android:visibility="visible"
+        android:text="@string/initializing_app"
         tools:text="Processing information..."/>
 </RelativeLayout>
