Updated Login Screen

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,11 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginEnd="8dp"
-    android:layout_marginStart="8dp"
+    android:background="@color/colorPrimaryLight"
     tools:context="com.forcetower.uefs.activity.LoginActivity">
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/ll_login_root"
+        android:layout_marginBottom="36dp"
+        android:src="@drawable/uefs_logo"
+        android:contentDescription="@string/app_name"/>
+
     <LinearLayout
+        android:id="@+id/ll_login_root"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
@@ -51,6 +59,8 @@
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:onClick="login"
+            android:background="@color/colorAccent"
+            android:textAllCaps="false"
             android:text="@string/login_btn"/>
     </LinearLayout>
 
