--- a/app/src/main/res/layout/activity_parsing.xml
+++ b/app/src/main/res/layout/activity_parsing.xml
@@ -5,6 +5,7 @@
     android:id="@+id/view_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorPrimaryLight"
     tools:context="com.forcetower.uefs.activity.ParsingActivity">
 
     <ProgressBar
