--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,4 +16,13 @@
         <item name="android:listDivider">@null</item>
     </style>
 
+    <style name="Custom.Widget.Toolbar" parent="Widget.AppCompat.Toolbar">
+        <item name="maxButtonHeight">48dp</item>
+        <item name="android:paddingLeft">4dp</item>
+        <item name="android:paddingRight">4dp</item>
+        <item name="contentInsetStart">16dp</item>
+    </style>
+
+    <style name="AppTheme.NavigationDrawer" parent="AppTheme" />
+
 </resources>
