--- a/app/src/main/res/layout/nav_drawer_list_item.xml
+++ b/app/src/main/res/layout/nav_drawer_list_item.xml
@@ -6,7 +6,7 @@
     android:layout_height="48dp"
     android:focusable="true"
     android:focusableInTouchMode="false"
-    android:background="?android:attr/selectableItemBackground">
+    android:foreground="?android:attr/selectableItemBackground">
 
     <ImageView
         android:id="@android:id/icon"
