--- a/app/src/main/res/layout/fragment_grades.xml
+++ b/app/src/main/res/layout/fragment_grades.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:tabMode="scrollable"
+        android:background="@color/colorPrimary"
         app:tabBackground="@color/colorPrimary"
         app:tabSelectedTextColor="@color/white">
     </android.support.design.widget.TabLayout>
