Added final mean to grades

--- a/app/src/main/res/layout/fragment_grades_of_semester.xml
+++ b/app/src/main/res/layout/fragment_grades_of_semester.xml
@@ -14,7 +14,8 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp">
+        android:layout_marginTop="8dp"
+        android:paddingBottom="16dp">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_all_grades"
