--- a/app/src/main/res/layout/fragment_message_board.xml
+++ b/app/src/main/res/layout/fragment_message_board.xml
@@ -18,7 +18,8 @@
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp">
+            android:layout_marginTop="8dp"
+            android:paddingBottom="8dp">
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/rv_messages"
