--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
 
     <color name="divider">#BDBDBD</color>
     <color name="light_gray">#D9D9D9</color>
+    <color name="lighter_gray">#EEEEEE</color>
     <color name="little_darker_gray">#C7C7C7</color>
 
     <!-- Nav drawer colors -->
