--- a/app/src/main/res/layout/card_class_details_misses.xml
+++ b/app/src/main/res/layout/card_class_details_misses.xml
@@ -6,7 +6,7 @@
     android:id="@+id/card_general_details"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="8dp"
+    android:layout_marginTop="4dp"
     app:cardCornerRadius="2dp"
     app:cardElevation="2dp">
 
@@ -17,7 +17,8 @@
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
-        android:layout_marginEnd="16dp">
+        android:layout_marginEnd="16dp"
+        android:paddingBottom="8dp">
 
         <RelativeLayout
             android:layout_width="30dp"
@@ -27,7 +28,7 @@
                 android:id="@+id/iv_icon_class_missed"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:background="@drawable/ic_info_outline_black_24dp"
+                android:background="@drawable/ic_priority_high_black_24dp"
                 android:layout_centerVertical="true"/>
         </RelativeLayout>
 
