--- a/app/src/main/res/layout/card_class_details_prev_and_next.xml
+++ b/app/src/main/res/layout/card_class_details_prev_and_next.xml
@@ -6,7 +6,7 @@
     android:id="@+id/card_general_details"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="8dp"
+    android:layout_marginTop="4dp"
     app:cardCornerRadius="2dp"
     app:cardElevation="2dp">
 
@@ -17,7 +17,8 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginLeft="8dp">
+        android:layout_marginLeft="8dp"
+        android:paddingBottom="8dp">
 
         <LinearLayout
             android:orientation="horizontal"
